config.json: updated title in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -5,7 +5,7 @@
         "headerVariant": "variant-c",
         "primaryColors": "colors-a",
         "secondaryColors": "colors-f",
-        "title": "Starter",
+        "title": "The Ryan Furrer Blog",
         "isTitleVisible": true,
         "primaryLinks": [
             {
