--- a/content/data/config.json
+++ b/content/data/config.json
@@ -44,7 +44,7 @@
         ],
         "styles": {
             "self": {
-                "width": "narrow",
+                "width": "full",
                 "padding": [
                     "pt-5",
                     "pb-5",
