config.json: updated primaryColors in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -3,7 +3,7 @@
     "favicon": "/images/favicon.svg",
     "header": {
         "headerVariant": "variant-c",
-        "primaryColors": "colors-a",
+        "primaryColors": "colors-c",
         "secondaryColors": "colors-f",
         "title": "The Ryan Furrer Blog",
         "isTitleVisible": true,
