--- a/content/data/config.json
+++ b/content/data/config.json
@@ -62,8 +62,7 @@
                     "opacity": 100
                 }
             },
-            "type": "ImageBlock",
-            "url": "/images/99CD51D0-7295-4F1E-8FC5-46126C30C2FC_1_102_o.jpeg"
+            "type": "ImageBlock"
         }
     },
     "footer": {
