config.json: updated title in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -79,7 +79,7 @@
             "type": "ImageBlock",
             "url": "/images/logo.svg"
         },
-        "title": "Starter",
+        "title": "The Ryan Furrer Blog",
         "contacts": {
             "title": "Contact details",
             "phoneNumber": "850-123-5021",
