config.json: updated email in contacts

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -82,7 +82,7 @@
         "title": "The Ryan Furrer Blog",
         "contacts": {
             "title": "Contact details",
-            "email": "info@lorem.mail",
+            "email": "theryanfurrer@gmail.com",
             "emailAltText": "Our email",
             "address": "312 Lovely Street, NY",
             "addressAltText": "Our address"
