config.json: updated url in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -115,7 +115,7 @@
                 "type": "Social",
                 "altText": "Twitter",
                 "label": "Twitter",
-                "url": "/",
+                "url": "twitter.com/TheRyanFurrer",
                 "icon": "twitter"
             },
             {
