config.json: updated icon in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -124,7 +124,7 @@
                 "altText": "Instagram",
                 "label": "Instagram",
                 "url": "/",
-                "icon": "instagram"
+                "icon": "github"
             },
             {
                 "type": "Social",
