config.json: updated style in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -124,7 +124,8 @@
                 "altText": "Instagram",
                 "label": "Instagram",
                 "url": "/",
-                "icon": "github"
+                "icon": "github",
+                "style": "link"
             },
             {
                 "type": "Social",
