--- a/content/data/config.json
+++ b/content/data/config.json
@@ -122,7 +122,7 @@
             {
                 "type": "Social",
                 "altText": "Instagram",
-                "label": "Instagram",
+                "label": "GitHub",
                 "url": "/",
                 "icon": "github",
                 "style": "link"
