--- a/content/data/config.json
+++ b/content/data/config.json
@@ -121,7 +121,7 @@
             },
             {
                 "type": "Social",
-                "altText": "Instagram",
+                "altText": "GitHub",
                 "label": "GitHub",
                 "url": "/",
                 "icon": "github",
