config.json: updated url in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -123,7 +123,7 @@
                 "type": "Social",
                 "altText": "GitHub",
                 "label": "GitHub",
-                "url": "/",
+                "url": "https://github.com/TheRyanFurrer",
                 "icon": "github",
                 "style": "link"
             },
