--- a/content/data/config.json
+++ b/content/data/config.json
@@ -132,7 +132,7 @@
                 "altText": "Facebook",
                 "label": "Facebook",
                 "url": "/",
-                "icon": "facebook"
+                "icon": "instagram"
             }
         ],
         "legalLinks": [
