config.json: updated style in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -132,7 +132,8 @@
                 "altText": "Facebook",
                 "label": "Facebook",
                 "url": "/",
-                "icon": "linkedin"
+                "icon": "linkedin",
+                "style": "link"
             }
         ],
         "legalLinks": [
