config.json: updated label in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -130,7 +130,7 @@
             {
                 "type": "Social",
                 "altText": "Facebook",
-                "label": "Facebook",
+                "label": "Linkedin",
                 "url": "/",
                 "icon": "linkedin",
                 "style": "link"
