config.json: updated altText in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -129,7 +129,7 @@
             },
             {
                 "type": "Social",
-                "altText": "Facebook",
+                "altText": "Linkedin",
                 "label": "Linkedin",
                 "url": "/",
                 "icon": "linkedin",
