config.json: updated url in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -131,7 +131,7 @@
                 "type": "Social",
                 "altText": "Linkedin",
                 "label": "Linkedin",
-                "url": "/",
+                "url": "https://www.linkedin.com/in/theryanfurrer/",
                 "icon": "linkedin",
                 "style": "link"
             }
