config.json: updated socialLinks in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -134,6 +134,14 @@
                 "url": "https://www.linkedin.com/in/theryanfurrer/",
                 "icon": "linkedin",
                 "style": "link"
+            },
+            {
+                "label": "Facebook",
+                "altText": "",
+                "url": "/",
+                "icon": "facebook",
+                "style": "link",
+                "elementId": ""
             }
         ],
         "legalLinks": [
