config.json: updated icon in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -139,7 +139,7 @@
                 "label": "Facebook",
                 "altText": "",
                 "url": "/",
-                "icon": "facebook",
+                "icon": "instagram",
                 "style": "link",
                 "elementId": ""
             }
