config.json: updated label in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -136,7 +136,7 @@
                 "style": "link"
             },
             {
-                "label": "Facebook",
+                "label": "Instagram",
                 "altText": "",
                 "url": "/",
                 "icon": "instagram",
