config.json: updated altText in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -137,7 +137,7 @@
             },
             {
                 "label": "Instagram",
-                "altText": "",
+                "altText": "Instagram",
                 "url": "/",
                 "icon": "instagram",
                 "style": "link",
