--- a/content/data/config.json
+++ b/content/data/config.json
@@ -138,7 +138,7 @@
             {
                 "label": "Instagram",
                 "altText": "Instagram",
-                "url": "/",
+                "url": "https://www.instagram.com/theryanfurrer/",
                 "icon": "instagram",
                 "style": "link",
                 "elementId": ""
