config.json: updated width in self

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -146,7 +146,7 @@
         ],
         "styles": {
             "self": {
-                "width": "narrow",
+                "width": "wide",
                 "padding": [
                     "pt-16",
                     "pb-16",
