config.json: updated legalLinks in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -132,13 +132,7 @@
                 "elementId": ""
             }
         ],
-        "legalLinks": [
-            {
-                "type": "Link",
-                "label": "Privacy Policy",
-                "url": "/"
-            }
-        ],
+        "legalLinks": [],
         "styles": {
             "self": {
                 "width": "wide",
