config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -81,7 +81,7 @@
             },
             {
                 "type": "Link",
-                "label": "Careers",
+                "label": "Portfolio",
                 "url": "/careers",
                 "altText": ""
             },
