config.json: updated altText in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -83,7 +83,7 @@
                 "type": "Link",
                 "label": "Portfolio",
                 "url": "/careers",
-                "altText": ""
+                "altText": "Portfolio"
             },
             {
                 "type": "Link",
