--- a/content/data/config.json
+++ b/content/data/config.json
@@ -82,7 +82,7 @@
             {
                 "type": "Link",
                 "label": "Portfolio",
-                "url": "/careers",
+                "url": "https://furrer-2022.netlify.app/",
                 "altText": "Portfolio"
             },
             {
