config.json: updated altText in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -89,7 +89,7 @@
                 "type": "Link",
                 "label": "About",
                 "url": "/faq",
-                "altText": ""
+                "altText": "About"
             },
             {
                 "type": "Link",
