config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -88,7 +88,7 @@
             {
                 "type": "Link",
                 "label": "About",
-                "url": "/faq",
+                "url": "https://furrer-2022.netlify.app/about.html",
                 "altText": "About"
             },
             {
