config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -93,7 +93,7 @@
             },
             {
                 "type": "Link",
-                "label": "Blog",
+                "label": "Contact",
                 "url": "/blog",
                 "altText": ""
             }
