config.json: updated altText in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -95,7 +95,7 @@
                 "type": "Link",
                 "label": "Contact",
                 "url": "/blog",
-                "altText": ""
+                "altText": "Contact"
             }
         ],
         "socialLinks": [
