config.json: updated primaryLinks in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -96,6 +96,16 @@
                 "label": "Contact",
                 "url": "https://furrer-2022.netlify.app/contact.html",
                 "altText": "Contact"
+            },
+            {
+                "label": "Learn more",
+                "altText": "",
+                "url": "/",
+                "showIcon": false,
+                "icon": "arrowRight",
+                "iconPosition": "right",
+                "elementId": "",
+                "type": "Link"
             }
         ],
         "socialLinks": [
