config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -98,7 +98,7 @@
                 "altText": "Contact"
             },
             {
-                "label": "Learn more",
+                "label": "GitHub",
                 "altText": "",
                 "url": "/",
                 "showIcon": false,
