--- a/content/data/config.json
+++ b/content/data/config.json
@@ -99,7 +99,7 @@
             },
             {
                 "label": "GitHub",
-                "altText": "",
+                "altText": "GitHub",
                 "url": "/",
                 "showIcon": false,
                 "icon": "arrowRight",
