--- a/content/data/config.json
+++ b/content/data/config.json
@@ -18,7 +18,7 @@
                 "type": "Link",
                 "label": "Portfolio",
                 "url": "/careers",
-                "altText": ""
+                "altText": "Portfolio"
             },
             {
                 "type": "Link",
