config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -17,7 +17,7 @@
             {
                 "type": "Link",
                 "label": "Portfolio",
-                "url": "/careers",
+                "url": "https://furrer-2022.netlify.app/",
                 "altText": "Portfolio"
             },
             {
