config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -22,7 +22,7 @@
             },
             {
                 "type": "Link",
-                "label": "FAQ",
+                "label": "About",
                 "url": "/faq",
                 "altText": ""
             },
