--- a/content/data/config.json
+++ b/content/data/config.json
@@ -23,7 +23,7 @@
             {
                 "type": "Link",
                 "label": "About",
-                "url": "/faq",
+                "url": "https://furrer-2022.netlify.app/about.html",
                 "altText": "About"
             },
             {
