config.json: updated altText in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -29,7 +29,7 @@
             {
                 "type": "Link",
                 "label": "Contact",
-                "altText": "Blog",
+                "altText": "Contact",
                 "url": "/blog"
             }
         ],
