config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -33,7 +33,7 @@
                 "url": "https://furrer-2022.netlify.app/contact.html"
             },
             {
-                "label": "Learn more",
+                "label": "GitHub",
                 "altText": "",
                 "url": "/",
                 "showIcon": false,
