--- a/content/data/config.json
+++ b/content/data/config.json
@@ -35,7 +35,7 @@
             {
                 "label": "GitHub",
                 "altText": "GitHub",
-                "url": "/",
+                "url": "https://github.com/TheRyanFurrer",
                 "showIcon": false,
                 "icon": "arrowRight",
                 "iconPosition": "right",
