config.json: updated secondaryLinks in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -43,7 +43,18 @@
                 "type": "Link"
             }
         ],
-        "secondaryLinks": [],
+        "secondaryLinks": [
+            {
+                "label": "Learn more",
+                "altText": "",
+                "url": "/",
+                "showIcon": false,
+                "icon": "arrowRight",
+                "iconPosition": "right",
+                "elementId": "",
+                "type": "Link"
+            }
+        ],
         "styles": {
             "self": {
                 "width": "wide",
