config.json: updated altText in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -85,7 +85,7 @@
                 "type": "Link",
                 "label": "Portfolio",
                 "url": "https://furrer-2022.netlify.app/",
-                "altText": "Portfolio"
+                "altText": "Visit my portfolio"
             },
             {
                 "type": "Link",
