--- a/content/data/config.json
+++ b/content/data/config.json
@@ -91,7 +91,7 @@
                 "type": "Link",
                 "label": "About",
                 "url": "https://furrer-2022.netlify.app/about.html",
-                "altText": "About"
+                "altText": "Learn more about Ryan Furrer"
             },
             {
                 "type": "Link",
