config.json: updated altText in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -97,7 +97,7 @@
                 "type": "Link",
                 "label": "Contact",
                 "url": "https://furrer-2022.netlify.app/contact.html",
-                "altText": "Contact"
+                "altText": "Contact Ryan Furrer"
             },
             {
                 "label": "GitHub",
