config.json: updated altText in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -121,7 +121,7 @@
             },
             {
                 "type": "Social",
-                "altText": "Linkedin",
+                "altText": "View my Linkedin profile",
                 "label": "Linkedin",
                 "url": "https://www.linkedin.com/in/theryanfurrer/",
                 "icon": "linkedin",
