config.json: updated altText in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -129,7 +129,7 @@
             },
             {
                 "type": "Social",
-                "altText": "Twitter",
+                "altText": "View my Twitter profile",
                 "label": "Twitter",
                 "url": "https://twitter.com/theryanfurrer",
                 "icon": "twitter",
