config.json: updated altText in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -137,7 +137,7 @@
             },
             {
                 "label": "Instagram",
-                "altText": "Instagram",
+                "altText": "View my Instagram",
                 "url": "https://www.instagram.com/theryanfurrer/",
                 "icon": "instagram",
                 "style": "link",
