config.json: updated socialLinks in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -150,6 +150,14 @@
                 "icon": "facebook",
                 "style": "link",
                 "elementId": ""
+            },
+            {
+                "label": "Facebook",
+                "altText": "",
+                "url": "/",
+                "icon": "facebook",
+                "style": "link",
+                "elementId": ""
             }
         ],
         "legalLinks": [],
