config.json: updated altText in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -12,7 +12,7 @@
                 "type": "Link",
                 "label": "Home",
                 "url": "/",
-                "altText": ""
+                "altText": "Go to homepage"
             },
             {
                 "type": "Link",
