--- a/content/data/config.json
+++ b/content/data/config.json
@@ -18,7 +18,7 @@
                 "type": "Link",
                 "label": "Portfolio",
                 "url": "https://furrer-2022.netlify.app/",
-                "altText": "Portfolio"
+                "altText": "View my portfolio"
             },
             {
                 "type": "Link",
