config.json: updated altText in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -24,7 +24,7 @@
                 "type": "Link",
                 "label": "About",
                 "url": "https://furrer-2022.netlify.app/about.html",
-                "altText": "About"
+                "altText": "Learn more about Ryan Furrer"
             },
             {
                 "type": "Link",
