config.json: updated altText in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -29,7 +29,7 @@
             {
                 "type": "Link",
                 "label": "Contact",
-                "altText": "Contact",
+                "altText": "Contact Ryan Furrer",
                 "url": "https://furrer-2022.netlify.app/contact.html"
             },
             {
