--- a/content/data/config.json
+++ b/content/data/config.json
@@ -34,7 +34,7 @@
             },
             {
                 "label": "GitHub",
-                "altText": "GitHub",
+                "altText": "View my GitHub profile",
                 "url": "https://github.com/TheRyanFurrer",
                 "showIcon": false,
                 "icon": "arrowRight",
