config.json: Multiple updates: * updated primaryLinks in header * updated __metadata in primaryLinks * updated showIcon in primaryLinks * updated icon in primaryLinks * updated iconPosition in primaryLinks * updated elementId in primaryLinks * updated label in primaryLinks * updated url in primaryLinks * updated altText in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -15,6 +15,16 @@
                 "altText": "Go to homepage"
             },
             {
+                "label": "Learn more",
+                "altText": "",
+                "url": "/",
+                "showIcon": false,
+                "icon": "arrowRight",
+                "iconPosition": "right",
+                "elementId": "",
+                "type": "Link"
+            },
+            {
                 "type": "Link",
                 "label": "Portfolio",
                 "url": "https://furrer-2022.netlify.app/",
