config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -15,7 +15,7 @@
                 "altText": "Go to homepage"
             },
             {
-                "label": "Learn more",
+                "label": "Blogs",
                 "altText": "",
                 "url": "/",
                 "showIcon": false,
