config.json: updated altText in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -16,7 +16,7 @@
             },
             {
                 "label": "Blogs",
-                "altText": "",
+                "altText": "View all Blogs",
                 "url": "/",
                 "showIcon": false,
                 "icon": "arrowRight",
