config.json: updated favicon

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,6 +1,6 @@
 {
     "type": "Config",
-    "favicon": "/images/favicon.svg",
+    "favicon": "/images/99CD51D0-7295-4F1E-8FC5-46126C30C2FC_1_102_o.jpeg",
     "header": {
         "headerVariant": "variant-c",
         "primaryColors": "colors-c",
