NewsletterCTA.yaml: changed

--- a/.stackbit/models/NewsletterCTA.yaml
+++ b/.stackbit/models/NewsletterCTA.yaml
@@ -1,6 +1,6 @@
 # .stackbit/models/NewsletterCTA.yaml
 
-name: AlertSection
+name: NewsletterCTA
 label: Alert Section
 groups:
   - sectionComponent
