NewsletterCTA.yaml: changed

--- a/.stackbit/models/NewsletterCTA.yaml
+++ b/.stackbit/models/NewsletterCTA.yaml
@@ -33,7 +33,7 @@ fields:
     label: Background size
     options:
       - label: Full
-        value: full
+        value: Full
       - label: Inset
         value: inset
     default: full
