NewsletterCTA.yaml: changed

--- a/.stackbit/models/NewsletterCTA.yaml
+++ b/.stackbit/models/NewsletterCTA.yaml
@@ -55,7 +55,7 @@ fields:
         - Button
     default:
       - type: Button
-        label: Try it now
+        label: Subscribe
         url: '/about'
         style: primary
   - type: model
