--- a/.stackbit/models/NewsletterCTA.yaml
+++ b/.stackbit/models/NewsletterCTA.yaml
@@ -36,7 +36,7 @@ fields:
         value: full
       - label: Inset
         value: inset
-    default: full
+    default: inset
   - type: string
     name: title
     label: Title
