config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -92,7 +92,7 @@
                 "altText": "Homepage"
             },
             {
-                "label": "Learn more",
+                "label": "Blog",
                 "altText": "",
                 "url": "/",
                 "showIcon": false,
