config.json: updated altText in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -93,7 +93,7 @@
             },
             {
                 "label": "Blog",
-                "altText": "",
+                "altText": "Blog",
                 "url": "/",
                 "showIcon": false,
                 "icon": "arrowRight",
