config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -15,7 +15,7 @@
                 "altText": "Go to homepage"
             },
             {
-                "label": "Blogs",
+                "label": "Blog",
                 "altText": "View all Blogs",
                 "url": "/blog",
                 "showIcon": false,
