--- a/.stackbit/models/NewsletterCTA.yaml
+++ b/.stackbit/models/NewsletterCTA.yaml
@@ -58,6 +58,7 @@ fields:
       self:
         height: ['auto', 'screen']
         width: ['narrow', 'wide', 'full']
+          value
         margin: ['tw0:96']
         padding: ['tw0:96']
         alignItems: ['flex-start', 'flex-end', 'center']
