NewsletterCTA.yaml: changed

--- a/.stackbit/models/NewsletterCTA.yaml
+++ b/.stackbit/models/NewsletterCTA.yaml
@@ -91,7 +91,7 @@ fields:
     default:
       self:
         height: auto
-        width: wide
+        width: narrow
         margin: ['mt-0', 'mb-0', 'ml-0', 'mr-0']
         padding: ['pt-12', 'pb-12', 'pl-4', 'pr-4']
         alignItems: center
