NewsletterCTA.yaml: changed

--- a/.stackbit/models/NewsletterCTA.yaml
+++ b/.stackbit/models/NewsletterCTA.yaml
@@ -93,7 +93,7 @@ fields:
         height: auto
         width: narrow
         margin: ['mt-0', 'mb-0', 'ml-0', 'mr-0']
-        padding: ['pt-12', 'pb-12', 'pl-4', 'pr-4']
+        padding: ['p-9']
         alignItems: center
         justifyContent: center
         flexDirection: row
