config-9gl2iqjxa.json: updated favicon

--- a/content/data/config-9gl2iqjxa.json
+++ b/content/data/config-9gl2iqjxa.json
@@ -1,5 +1,5 @@
 {
-    "favicon": "https://assets.stackbit.com/components/images/default/favicon.svg",
+    "favicon": "/images/portfolio-image-dark-theme-8307101b.webp",
     "header": {
         "headerVariant": "variant-c",
         "primaryColors": "colors-a",
