config-9gl2iqjxa.json: updated title in header

--- a/content/data/config-9gl2iqjxa.json
+++ b/content/data/config-9gl2iqjxa.json
@@ -4,7 +4,7 @@
         "headerVariant": "variant-c",
         "primaryColors": "colors-a",
         "secondaryColors": "colors-a",
-        "title": "Your Brand",
+        "title": "The Ryan Furrer Blog",
         "isTitleVisible": true,
         "logo": {
             "type": "ImageBlock",
